--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="benefícios">
         <h2 class="beneficios-titulo">Beneficios</h2>
         <ul>
-         <li class="itens">Atendimento aos Clientes<li>
+         <li class="itens">Atendimento aos Clientes</li>
          <li class="itens">Espaço Diferenciado</li>
          <li class="itens">Localização</li>
          <li class="itens">Profissionais Qualificados</li>
