--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
          <li class="itens">Localização</li>
          <li class="itens">Profissionais Qualificados</li>
     </ul>
+    <img src="beneficios.jpg">
     </div>
     
     
