--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <title>Barbearia Alura</title>
     </head>
     <body>
+        <header>
+            <h1 class="titulo">Barbearia Alura</h1>
+        </header>
         <img src="banner.jpg" id="banner">
         <div class="principal">
         <h1>Sobre a Barbearia Alura</h1>
@@ -21,7 +24,7 @@
          <li class="itens">Localização</li>
          <li class="itens">Profissionais Qualificados</li>
     </ul>
-    <img src="beneficios.jpg">
+    <img src="beneficios.jpg" class="beneficios-imagem">
     </div>
     
     
